k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: gendevbydocker/apacheserverubuntu:latest
          resources:
            limits:
              cpu: 1
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
