k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
